--- a/README
+++ b/README
@@ -13,23 +13,32 @@ good idea to provide version information here so that people can
 decide whether fixes for the module are worth downloading.
 
 INSTALLATION
+************
+
+This README assumes you have used a jhbuild environment to build Gtk2 on 
+your OSX box (I did it on my OS X Lion box with perl 5.12). I also
+assume you build the perl Gtk2 modules using prefix PREFIX=~/gtk/inst
 
 To install this module type the following:
 
-   perl Makefile.PL
+   jhbuild shell
+   perl Makefile.PL PREFIX=~/gtk/inst
    make
    make test
    make install
+   exit
 
 DEPENDENCIES
 
 This module requires these other modules and libraries:
 
-  blah blah blah
+   The OSX Gtk2 environment, see http://www.gtk.org/download/macos.php
+   Gtk2
+   Glib
 
 COPYRIGHT AND LICENCE
 
-Put the correct copyright and licence information here.
+LGPL like Gtk2.
 
 Copyright (C) 2012 by fam. Oesterholt
 
